[package]
name = "bevy_family"
version = "0.1.1"
description = "A simple crate that helps with creating, updating, and removing parent-child components in Bevy"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"

[dev-dependencies]
bevy_egui = "0.32.0"
env_logger = "0.11.6"
uuid = "1.12.1"